chore: try fix build

--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "@boxfull/utils",
   "version": "1.0.1",
   "description": "",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "files": [
-    "./build/**/*"
-  ],
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": ["build/**/*"],
   "scripts": {
     "clean": "del ./build/*",
     "build": "npm run clean && tsc",
