--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "clean": "del ./build/*",
     "build": "npm run clean && tsc",
-    "pub": "npm version patch && npm run build && npm publish"
+    "pub": "npm version patch && npm run build && npm publish",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
