--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "declaration": true,
-    "outDir": "./build",
-    "rootDir": "./src"
+    "outDir": "build",
+    "rootDirs": ["src", "tests"]
   }
 }
