--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@boxfull/utils",
   "version": "1.0.5",
   "description": "",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "files": [
     "build/**/*"
   ],
