--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "rules": {
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-extraneous-class": "off",
+    "@typescript-eslint/method-signature-style": "off",
     "max-len": ["error", { "code": 100, "ignoreComments": true }],
     "no-console": "warn"
   }
