--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "uuid": "^8.3.2"
   }
 }
