--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   }
 }
