--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "faker": "^5.5.3",
     "jest": "^27.0.6",
+    "madge": "^5.0.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   },
